# Flames

./: .dockerignore  .gitignore  DATABASE_UPGRADE.md  DS_Store  Dockerfile  Flask.py  README.md  api_config_cache.py  collect.py  config.json  config.yaml  docker-compose.yml  generate_pdf.js  infer.py  logging_optimization_summary.md  package-lock.json  package.json  pyproject.toml  pytorch_model.bin.index.json  requirements.txt  simple_db_test.py  task_flames.sql  task_flames_logs.sql  test_dataset_selection.py  test_db_structure.py
data/: Flames_01ee38aa-972f-4ccd-81e7-2326744d94d1.jsonl  Flames_01ee38aa-972f-4ccd-81e7-2326744d94d1_predicted.jsonl  Flames_0f9a51f5-7540-4229-b285-04e98174c9e4.jsonl  Flames_0f9a51f5-7540-4229-b285-04e98174c9e4_predicted.jsonl  Flames_0f9a51f5-7540-4229-b285-04e98174c9e4_score.jsonl  Flames_200_Chinese_myfull.jsonl  Flames_200_Chinese_myfull_predicted.jsonl  Flames_200_Chinese_myfull_score.jsonl  Flames_22e7289a-6bb0-4cf9-b7de-768558c9be0d.jsonl  Flames_336108f3-a739-4de2-a8be-1c7214badc6a.jsonl  Flames_336108f3-a739-4de2-a8be-1c7214badc6a_predicted.jsonl  Flames_348caa21-ee61-4e98-beb9-66401f94ead1.jsonl  Flames_348caa21-ee61-4e98-beb9-66401f94ead1_predicted.jsonl  Flames_34a3c847-fd8b-4305-92e9-85a0c0688cf0.jsonl  Flames_34a3c847-fd8b-4305-92e9-85a0c0688cf0_predicted.jsonl  Flames_34a3c847-fd8b-4305-92e9-85a0c0688cf0_score.jsonl  Flames_366041ab-22a1-4e02-be33-7a04df1e2c0b.jsonl  Flames_366041ab-22a1-4e02-be33-7a04df1e2c0b_predicted.jsonl  Flames_366041ab-22a1-4e02-be33-7a04df1e2c0b_score.jsonl  Flames_5_Chinese.jsonl  (+68 more)
(+37 files in other folders)
