[project]
name = "flames"
version = "0.1.0"
description = "大模型安全评估"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "jinja2>=3.1.6",
    "pymysql>=1.1.2",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "transformers>=4.57.3",
    "weasyprint>=66.0",
    "openai>=1.0.0",
    "protobuf>=3.20.0",
]
