[project]
name = "flames"
version = "0.1.0"
description = "大模型安全评估"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.12.0",
    "psutil==7.2.0",
    "flask==3.1.2",
    "flask-cors==6.0.2",
    "openai==2.14.0",
    "pymysql==1.1.2",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "jinja2>=3.1.6",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "transformers>=4.57.3",
    "weasyprint>=66.0",
    "protobuf>=3.20.0",
    "python-dotenv==1.2.1",
]
